[metadata]
name = bstrap
version = 0.0.5
author = Florian Dubost
author_email = floriandubost1@gmail.com
description = A package to perform hypothesis testing and compute confidence intervals using bootstrapping.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fpgdubost/Bootstrap-hypothesis-testing
project_urls =
    Bug Tracker = https://github.com/fpgdubost/Bootstrap-hypothesis-testing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src